
v 8.13.0 (unreleased)
  - Update runner version only when updating contacted_at
  - Add link from system note to compare with previous version
  - Improve issue load time performance by avoiding ORDER BY in find_by call
  - Use gitlab-shell v3.6.2 (GIT TRACE logging)
  - Fix centering of custom header logos (Ashley Dumaine)
  - AbstractReferenceFilter caches project_refs on RequestStore when active
  - Replaced the check sign to arrow in the show build view. !6501
  - Add a /wip slash command to toggle the Work In Progress status of a merge request. !6259 (tbalthazar)
  - Speed-up group milestones show page
  - Don't include archived projects when creating group milestones. !4940 (Jeroen Jacobs)
  - Add tag shortcut from the Commit page. !6543
  - Keep refs for each deployment
  - Log LDAP lookup errors and don't swallow unrelated exceptions. !6103 (Markus Koller)
  - Add more tests for calendar contribution (ClemMakesApps)
  - Avoid database queries on Banzai::ReferenceParser::BaseParser for nodes without references
  - Simplify Mentionable concern instance methods
  - Fix permission for setting an issue's due date
  - API: Multi-file commit !6096 (mahcsig)
  - Revert "Label list shows all issues (opened or closed) with that label"
  - Expose expires_at field when sharing project on API
  - Fix VueJS template tags being rendered in code comments
  - Fix issue with page scrolling to top when closing or pinning sidebar (lukehowell)
  - Add Issue Board API support (andrebsguedes)
  - Allow the Koding integration to be configured through the API
  - Add new issue button to each list on Issues Board
  - Added soft wrap button to repository file/blob editor
  - Add word-wrap to issue title on issue and milestone boards (ClemMakesApps)
  - Fix todos page mobile viewport layout (ClemMakesApps)
  - Fix inconsistent highlighting of already selected activity nav-links (ClemMakesApps)
  - Fix robots.txt disallowing access to groups starting with "s" (Matt Harrison)